--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,7 +79,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/AnotherWorkingTitle")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/AnotherWorkingTitle")
-GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+GameViewportClientClassName=/Script/Engine.GameViewportClient
 +ActiveClassRedirects=(OldClassName="/Script/AnotherWorkingTitle.NeedInteraction",NewClassName="/Script/AnotherWorkingTitle.NeedModifierInteraction")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
