--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # UE file types
 *.uasset filter=lfs diff=lfs merge=lfs -text
 *.umap filter=lfs diff=lfs merge=lfs -text
+*.gguf filter=lfs diff=lfs merge=lfs -text
 
 # Raw Content types
 *.fbx filter=lfs diff=lfs merge=lfs -text
